@@ -1,5 +1,12 @@
 2006-12-18 Sandro Santilli <strk@refractions.net>
 
+	* source/precision/GeometrySnapper.cpp,
+	  source/headers/geos/geom/BinaryOp.h,
+	  source/headers/geos/precision/GeometrySnapper.h:
+	  Geometry snapping synced with JTS.
+
+2006-12-18 Sandro Santilli <strk@refractions.net>
+
 	* HOWTO_RELEASE: add ChangeLog's release mark step.
 	* source/precision/GeometrySnapper.cpp (computeSnapTolerance):
 	  properly compute snap tolerance for fixed precision geometries.
